--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "prod": "set NODE_ENV=production && node ./bin/www"
+    "start": "node .src/bin/www",
+    "debug": "set DEBUG=app:* & node ./src/bin/www",
+    "nodemon": "set DEBUG=app:* & nodemon ./src/bin/www",
+    "prod": "set NODE_ENV=production && node ./src/bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "helmet": "^3.22.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1"
   }
