--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "node ./src/bin/www",
     "debug": "set DEBUG=app:* & node ./src/bin/www",
     "nodemon": "set DEBUG=app:* & nodemon ./src/bin/www",
-    "prod": "set NODE_ENV=production && node ./src/bin/www"
+    "prod": "set NODE_ENV=production && node ./src/bin/www",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -19,6 +21,7 @@
     "jade": "~1.11.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^7.1.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1"
   }
